--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Augmented Reality</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							<p>Augmented reality is a technology that superimposes a computer-generated image on a user's view of the real world, thus providing a composite view.</p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
