--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						</div>
 					</section>
 				
+				<!-- Two -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
@@ -37,7 +38,7 @@
 						</div>
 					</section>
 
-				<!-- Two -->
+				<!-- Three -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Augmented Reality</h2>
@@ -48,7 +49,7 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Four -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Virtual Reality</h2>
@@ -59,7 +60,7 @@
 						</div>
 					</section>
 
-				<!-- Four -->
+				<!-- Five -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Mixed Reality</h2>
@@ -70,7 +71,7 @@
 						</div>
 					</section>
 
-				<!-- Five -->
+				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
