--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 				<!-- Two -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>What is augmented, virtual, and mixed reality?</h2>
 						</div>
 					</section>
 
@@ -228,7 +227,7 @@
 
 					</section>
 
-				<!-- Six -->
+				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Ipsum sed consequat</h2>
@@ -298,7 +297,7 @@
 						</div>
 					</section>
 
-				<!-- Seven -->
+				<!-- Eight -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
