--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Augmented Reality</h2>
-							<p>Augmented reality is a technology that superimposes a computer-generated image on a user's view of the real world, thus providing a composite view.</p>
+							<p>A technology that superimposes a computer-generated image on a user's view of the real world, thus providing a composite view.</p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
@@ -52,7 +52,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Virtual Reality</h2>
-							<p>Virtual reality is the computer-generated simulation of a three-dimensional image or environment that can be interacted with in a seemingly real or physical way by a person using special electronic equipment, such as a helmet with a screen inside or gloves fitted with sensors.</p>
+							<p>The computer-generated simulation of a three-dimensional image or environment that can be interacted with in a seemingly real or physical way by a person using special electronic equipment, such as a helmet with a screen inside or gloves fitted with sensors.</p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="" />
@@ -63,7 +63,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Mixed Reality</h2>
-							<p>Mixed reality is the merging of real and virtual worlds to produce new environments and visualizations where physical and digital objects co-exist and interact in real time.</p>
+							<p>The merging of real and virtual worlds to produce new environments and visualizations where physical and digital objects co-exist and interact in real time.</p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight03.jpg" alt="" />
@@ -326,11 +326,8 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.facebook.com/prisila.michelle" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/prisilamichelle/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
