--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Reality Technology and Tourism Industry</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">Technology is changing the travel and tourism industry. Augmented, virtual, and mixed reality offer several new ways to improve tourism and travelling experience.</p>
+							<h1>Reality Technology and Tourism Industry</h1>
+							<p class="major">Technology is changing the travel and tourism industry. Reality technology such as augmented, virtual, and mixed reality offer several new ways to improve tourism and travelling experience.</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
