--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 							<h2>How would they improve the tourism industry?</h2>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-diamond"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<span class="icon style2 major fa-hotel"></span>
+									<h3>Hotel</h3>
+									<p>Hotels can advertise themselves using reality technology. This also help costumers to actually see how a hotel is really like, so they can choose the best hotel according to their interest.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
-									<h3>Ipsum</h3>
+									<h3>Museum</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
@@ -136,7 +136,7 @@
 						</div>
 					</section>
 
-				<!-- Eight -->
+				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
