--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 								<section>
 									<span class="icon style2 major fa-hotel"></span>
 									<h3>Hotel</h3>
-									<p>Hotels can advertise themselves using reality technology. This also help costumers to actually see how a hotel is really like, so they can choose the best hotel according to their interest.</p>
+									<p>Hotels can advertise themselves using reality technology. This also help customers to actually see how a hotel is really like, so they can choose the best hotel according to their interest.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-save"></span>
+									<span class="icon style2 major fa-museum"></span>
 									<h3>Museum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Museums can provide interactive learning apps that enhance visitors experience. Persons with mobility impairment could see the entire museum without having to move much. </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
