--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<p>Hotels can advertise themselves using reality technology. This also help customers to actually see how a hotel is really like, so they can choose the best hotel according to their interest.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-museum"></span>
+									<span class="icon style2 major fa-globe"></span>
 									<h3>Museum</h3>
 									<p>Museums can provide interactive learning apps that enhance visitors experience. Persons with mobility impairment could see the entire museum without having to move much. </p>
 								</section>
