--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 									<p>Museums can provide interactive learning apps that enhance visitors experience. Persons with mobility impairment could see the entire museum without having to move much. </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>Dolor</h3>
+									<span class="icon style2 major fa-bar-travel"></span>
+									<h3>Travel</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
