--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 									<p>Museums can provide interactive learning apps that enhance visitors experience. Persons with mobility impairment could see the entire museum without having to move much. </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-bar-travel"></span>
+									<span class="icon style2 major fa-map"></span>
 									<h3>Travel</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Travel agency can provide the preview of locations in their travel package. This would prevent disappointment and maybe would attract more customer to buy their travel package. </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-wifi"></span>
