--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 									<p>Museums can provide interactive learning apps that enhance visitors experience. Persons with mobility impairment could see the entire museum without having to move much. </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-map"></span>
+									<span class="icon style2 major fa-paper-plane"></span>
 									<h3>Travel</h3>
 									<p>Travel agency can provide the preview of locations in their travel package. This would prevent disappointment and maybe would attract more customer to buy their travel package. </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<span class="icon style2 major fa-map"></span>
+									<h3>Navigation</h3>
+									<p>In foreign country, it could be hard to ask for directions if we don't understand the language. Cities can provide navigation to hotels and popular tourist places to help tourists navigate to the place they want to visit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-cog"></span>
@@ -98,7 +98,7 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-paper-plane"></span>
+									<span class="icon style2 major fa-diamond"></span>
 									<h3>Tempus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
