--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Travel</h3>
+									<h3>Travel Agency</h3>
 									<p>Travel agency can provide the preview of locations in their travel package. This would prevent disappointment and maybe would attract more customer to buy their travel package. </p>
 								</section>
 								<section>
@@ -93,14 +93,9 @@
 									<p>In foreign country, it could be hard to ask for directions if we don't understand the language. Cities can provide navigation to hotels and popular tourist places to help tourists navigate to the place they want to visit.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-diamond"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<span class="icon style2 major fa-binoculars"></span>
+									<h3>Tourist Attraction</h3>
+									<p>Tourist attraction can be made more interesting with mixed reality viewer or augmented reality apps. Tourist can rent mixed reality viewer as their personal and interactive tour guide, or they could download the tourist attraction app.</p>
 								</section>
 							</div>
 						</div>
