--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Reality Technology and Tourism Industry</h1>
+							<p>By <b>Prisila Michelle</b> - 13516129</p>
 							<p class="major">Technology is changing the travel and tourism industry. Reality technology such as augmented, virtual, and mixed reality offer several new ways to improve tourism industry and travel experience.</p>
 						</div>
 						<div class="image">
