--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<li><a href="https://www.facebook.com/prisila.michelle" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/prisilamichelle/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; 2018 Prisila Michelle. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
