--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Virtual Reality</h2>
-							<p>The computer-generated simulation of a three-dimensional image or environment that can be interacted with in a seemingly real or physical way by a person using special electronic equipment, such as a helmet with a screen inside or gloves fitted with sensors.</p>
+							<p>The computer-generated simulation of a three-dimensional image or environment that can be interacted with in a seemingly real or physical way by a person using special electronic equipment, such as a helmet with a screen inside or gloves fitted with sensors. Nowadays, there are lots of virtual reality viewer, such as Google Cardboard, HTC Vive Pro, Oculus Rift, and many more. </p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="" />
