--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Augmented Reality</h2>
-							<p>A technology that superimposes a computer-generated image on a user's view of the real world, thus providing a composite view.</p>
+							<p>A technology that superimposes a computer-generated image on a user's view of the real world, thus providing a composite view. Currently, augmented reality is the most mainstream reality technology, one of the reason being the release of Pokémon Go in 2016.</p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
