--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Mixed Reality</h2>
-							<p>The merging of real and virtual worlds to produce new environments and visualizations where physical and digital objects co-exist and interact in real time. One of the most popular mixed reality viewer is HoloLens by Microsoft.</p>
+							<p>The merging of real and virtual worlds to produce new environments and visualizations where physical and digital objects co-exist and interact in real time. One of the most popular mixed reality viewer is HoloLens by Microsoft. HoloLens is the first self-contained, holographic computer, that enables us to engage with our digital content and interact with holograms in the world around us.</p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight03.jpg" alt="" />
