--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
 							<img src="images/spotlight03.jpg" alt="" />
 						</div>
 					</section>
-
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/pLd9WPlaMpY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/pLd9WPlaMpY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						</div>
+					</section>
+					
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
