clean javascript code

--- a/AcakKata/index.html
+++ b/AcakKata/index.html
@@ -24,11 +24,10 @@
     </body>
     <script src="statics/js/ajax.js"></script>
     <script>
-
         let score, correctword, responsearray;
         window.onload = function() {
-            let url = "https://prisilamichelle.github.io/kata.txt";
             score = 0;
+            let url = "https://prisilamichelle.github.io/kata.txt";
             let ajax = requestGet(
                 url,
                 null,
@@ -49,8 +48,8 @@
         function shuffleWord(word) {
             let i = 0, j = 0, temp = null;
             let wordarray = word.split("");
-            for(let i = wordarray.length - 1; i > 0; i--) {
-                let j = Math.floor(Math.random() * (i + 1))
+            for(i = wordarray.length - 1; i > 0; i--) {
+                j = Math.floor(Math.random() * (i + 1));
                 temp = wordarray[i];
                 wordarray[i] = wordarray[j];
                 wordarray[j] = temp;
@@ -70,14 +69,23 @@
             failureNotifTimer = setTimeout(hideFailureNotif, 2000);
         };
 
-        function showStatus(status,score,shuffledword){
+        function showStatus(status,score){
             if (status === true) {
                 document.getElementById('status').innerHTML = "<h2>BENAR! Poin Anda : " + score + "<h2>";
                 document.getElementById('input-word').value = "";
-                document.getElementById('shuffled-word').innerHTML = shuffledword;
             } else {
                 document.getElementById('status').innerHTML = "<h2>SALAH! Silakan coba lagi.<h2>";
             }
+        }
+
+        function updateStatusScore() {
+            score = score + 1;
+            showStatus(true,score);
+        }
+
+        function updateWord() {
+            correctword = pickRandomWord(responsearray);
+            document.getElementById('shuffled-word').innerHTML = shuffleWord(correctword);
         }
 
         function checkInput() {
@@ -86,11 +94,10 @@
                 showFailureNotif("Harap masukkan kata sebelum menekan tombol enter.");
             } else {
                 if (input === correctword) {
-                    score = score + 1;
-                    correctword = pickRandomWord(responsearray);
-                    showStatus(true,score,shuffleWord(correctword));
+                    updateStatusScore();
+                    updateWord();
                 } else {
-                    showStatus(false,score,null);
+                    showStatus(false,score);
                 }
             }   
         }
